# opengl_model_viewer

./: .gitignore  CMakeLists.txt  README.md  camera_control.cc  camera_control.h  coordinate_axes.cc  coordinate_axes.h  drawable.h  gl_app.cc  gl_app.h  glsl_shader.h  main.cc
data/shader/: rainbow.frag  rainbow.vert  simple.vert
include/: camera_control.h  coordinate_axes.h  drawable.h  opengl_model_viewer.h
src/: camera_control.cc  coordinate_axes.cc  drawable.cc  glsl_shader.cc  main.cc  opengl_model_viewer.cc
